# PythonXReact-NextJS

./: .env  .gitignore  README.MD  docker-compose.yml  package.json
app/: next.config.js  package.json
app/pages/: index.tsx
app/prisma/: schema.prisma
app/prisma/migrations/20220930122345_init/: migration.sql
backend/: .pylintrc  Dockerfile  add_nightlytorch.sh  install.sh  main.py  mypy.ini  pyproject.toml  test.sh
backend/nightlytorch/: torchaudio-0.13.0.dev20221007-cp39-cp39-macosx_12_0_arm64.whl  torchaudio-0.13.0.dev20221010-cp39-cp39-macosx_12_0_arm64.whl  torchvision-0.15.0.dev20221007-cp39-cp39-macosx_11_0_arm64.whl  torchvision-0.15.0.dev20221010-cp39-cp39-macosx_11_0_arm64.whl
backend/pythonxreact/: app.py
backend/pythonxreact-nextjs/: main.py
backend/pythonxreact/celery_tasks/: tasks.py
backend/pythonxreact/config/: celery_config.py  celery_utils.py
backend/pythonxreact/models/: mnist.py
backend/pythonxreact/routers/: chat.py  universities.py
python-react/: .env  package.json
python-react/pages/: index.tsx
python-react/prisma/: schema.prisma
python-react/prisma/migrations/20220929185015_init/: migration.sql
rabbitmq/data/: .erlang.cookie
rabbitmq/data/mnesia/rabbit@19e5346d1363/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq/data/mnesia/rabbit@63a0581f76dc/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_durable_route.DCD  (+8 more)
(+34 files in other folders)
