[tool.poetry]
name = "pythonxreact-nextjs"
version = "0.1.0"
description = ""
authors = ["Yannick <33485945+YannickAaron@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pythonxreact-nextjs"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-RESTful = "^0.3.9"
Flask-MySQL = "^1.5.2"
Flask-SocketIO = "^5.3.1"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^2.5.1"
bcrypt = "^4.0.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
websockets = "^10.3"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
mypy = "^0.941"
pytest = "^6.2.5"
black = "^22.3.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132
target-version = ['py37', 'py38', 'py39']
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 100
